# quant-bot

./: README.md  pyproject.toml  requirements.txt
docs/: 00_master_overview.md  10_buzz_ui.md  11_ingest_buzz.md  98_future_models_and_directions.md  99_research_philosophy.md
quant-bot/: .gitignore  README.md
quant-bot/docs/: 00-overview.md  10-data-sources.md  20-strategies.md  30-risk-controls.md  40-explainability.md  50-deploy-ops.md  Roadmap.md
quant-bot/docs/quant-bot-ml/: README.md  three-model plan.md
quant-bot/src/config/: rules.yml  universe.yml
quant-bot/src/data/loaders/: polygon_loader.py
quant-bot/src/execution/: order_builder.py
quant-bot/src/explain/: reason_tables.py
quant-bot/src/jobs/: intraday_scan.py
quant-bot/src/ml/: datasets.py  eval.py  features.py  labels.py
quant-bot/src/ml/models/: train_news.py  train_nowcast.py  train_window.py
quant-bot/src/strategies/: equities_rules.py
src/ml/data/: ingest_buzz.py  ingest_prices.py  tickers.py
src/ml/data/universe/: sp500.csv
src/ml/models/: train_nowcast.py
src/quant_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ui/: app.py
